Updated by task 'AutomatedMDTask_1630361971415_TM-MT_1630361976017'

--- a/help/home/c-release-notes-insight/c-6-5.md
+++ b/help/home/c-release-notes-insight/c-6-5.md
@@ -2,9 +2,9 @@
 description: As notas de versão do Data Workbench 6.5 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
 title: Notas de versão do Data Workbench 6.5
 uuid: 20d7da13-3de9-416e-bfc2-cdc1dac310fe
-source-git-commit: 232117a8cacaecf8e5d7fcaccc5290d6297947e5
+source-git-commit: 050468bf6a9ef9c07719ded79c8ab68753d58647
 workflow-type: tm+mt
-source-wordcount: '1353'
+source-wordcount: '1356'
 ht-degree: 3%
 
 ---
@@ -93,11 +93,11 @@ A Data Workbench 6.5 inclui estes novos recursos:
   </tr> 
   <tr> 
    <td colname="col1"> Entrega S/FTP </td> 
-   <td colname="col2"> Uma <a href="https://experienceleague.adobe.com/docs/data-workbench/using/client/export-data/exporting-data.html" format="https" scope="external"> exportação SFTP/FTP </a> foi adicionada à estrutura Exportar integração . Agora é possível definir as configurações do cliente (estação de trabalho) e exportar usando CSV, TSV, Exportar segmentos ou Exportar segmentos com cabeçalho usando protocolos FTP e SFTP, permitindo enviar arquivos para servidores. <p>Selecione qualquer exportação clicando com o botão direito do mouse em uma <a href="https://docs.adobe.com/help/en/data-workbench/using/client/export-data/c-segment-export.html" format="https" scope="external"> Tabela de detalhes </a>. Depois de selecionada, uma tabela de configuração de exportação é aberta, permitindo que você adicione ou atualize as configurações de exportação. </p> </td> 
+   <td colname="col2"> Uma <a href="https://experienceleague.adobe.com/docs/data-workbench/using/client/export-data/exporting-data.html" format="https" scope="external"> exportação SFTP/FTP </a> foi adicionada à estrutura Exportar integração . Agora é possível definir as configurações do cliente (estação de trabalho) e exportar usando CSV, TSV, Exportar segmentos ou Exportar segmentos com cabeçalho usando protocolos FTP e SFTP, permitindo enviar arquivos para servidores. <p>Selecione qualquer exportação clicando com o botão direito do mouse em uma <a href="https://experienceleague.adobe.com/docs/data-workbench/using/client/export-data/c-segment-export.html?lang=en" format="https" scope="external"> Tabela de detalhes </a>. Depois de selecionada, uma tabela de configuração de exportação é aberta, permitindo que você adicione ou atualize as configurações de exportação. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> Usar <i>Windows Certificate Store</i> na estação de trabalho (cliente) </td> 
-   <td colname="col2"> <p>Agora você pode armazenar o certificado SSL e a chave privada para o Cliente do Data Workbench (Workstation) no <a href="https://docs.adobe.com/help/en/data-workbench/using/server-admin-install/install-servers/insight-server-dpu/dig-certs/crypto-api.html" format="https" scope="external"> Windows Certificate Store </a> para comunicação SSL com servidores. O uso do <i>Windows Certificate Store</i> pode ser preferível para aqueles que gerenciam certificados em um único armazenamento. (Consulte <i>Problemas conhecidos.</i>) </p> </td> 
+   <td colname="col2"> <p>Agora você pode armazenar o certificado SSL e a chave privada para o Cliente do Data Workbench (Workstation) no <a href="https://experienceleague.adobe.com/docs/data-workbench/using/server-admin-install/install-servers/insight-server-dpu/dig-certs/crypto-api.html?lang=en" format="https" scope="external"> Windows Certificate Store </a> para comunicação SSL com servidores. O uso do <i>Windows Certificate Store</i> pode ser preferível para aqueles que gerenciam certificados em um único armazenamento. (Consulte <i>Problemas conhecidos.</i>) </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <b>Criptografia </b> de cadeia de caracteres como um serviço </td> 
@@ -113,7 +113,7 @@ A Data Workbench 6.5 inclui estes novos recursos:
   </tr> 
   <tr> 
    <td colname="col1"> Atualizações da Administração de Usuário dos Membros do Grupo </td> 
-   <td colname="col2"> Alterações em <span class="filepath"> Access Control.cfg </span>e <span class="filepath"> User List.cfg </span> adicionadas ao pacote <b>Base</b> para uso com <a href="https://docs.adobe.com/help/en/data-workbench/using/server-admin-install/admin-dwb-server/access-control/dwb-self-admin-member-access.html" format="https" scope="external"> User Admin of Group Members </a>. </td> 
+   <td colname="col2"> Alterações em <span class="filepath"> Access Control.cfg </span>e <span class="filepath"> User List.cfg </span> adicionadas ao pacote <b>Base</b> para uso com <a href="https://experienceleague.adobe.com/docs/data-workbench/using/server-admin-install/admin-dwb-server/access-control/dwb-self-admin-member-access.html?lang=en" format="https" scope="external"> User Admin of Group Members </a>. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> Atualização do <b>Limite de Memória de Consulta</b> </td> 
