Updated by task 'AutomatedMDTask_1637617348682_TM-MT_1637617352801'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/data-workbench.en/commit/322f881bb4ac45ed36337d0ff7f9855e407cee07

--- a/help/home/c-release-notes-insight/c-6-3/c-6-3.md
+++ b/help/home/c-release-notes-insight/c-6-3/c-6-3.md
@@ -3,7 +3,7 @@ description: As notas de versão do Data Workbench 6.3 incluem novos recursos, r
 title: Notas de versão do Data Workbench 6.3
 uuid: a8db4c11-f821-4d14-90d4-5194e58c50c1
 exl-id: c6a45e89-f5dc-4321-adb3-8e118be9dde0
-source-git-commit: 517257321e11a325da62f10a601c4c274edafa27
+source-git-commit: 322f881bb4ac45ed36337d0ff7f9855e407cee07
 workflow-type: tm+mt
 source-wordcount: '1683'
 ht-degree: 6%
@@ -32,15 +32,15 @@ A Data Workbench 6.3 inclui estes novos recursos:
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-exp-data-seg-exp/c-mmp-integration.md"> Integração com o Master Marketing Profile </a> </td> 
-   <td colname="col2"> Compartilhe com a Adobe Experience Cloud segmentos avançados de clientes criados no Data Workbench. A integração com perfis e públicos-alvo permite que o <a href="https://www.adobe.com/solutions/digital-marketing.html?promoid=KLXLZ" format="https" scope="external"> Adobe Experience Cloud </a> e outros recursos do Adobe Analytics aproveitem os segmentos avançados de público-alvo criados no Data Workbench. Isso requer que o Experience Cloud esteja configurado e em execução. <p>A integração com o Experience Cloud Principal permite que você execute recursos preditivos como o clustering ou a pontuação de propensão e, em seguida, envie segmentos para a Adobe Experience Cloud ou outros produtos maiores, como Adobe Target e Adobe Experience Manager. </p> </td> 
+   <td colname="col2"> Compartilhe com a Adobe Experience Cloud segmentos avançados de clientes criados no Data Workbench. A integração com Perfis e públicos-alvo permite que o <a href="https://www.adobe.com/solutions/digital-marketing.html?promoid=KLXLZ" format="https" scope="external"> Adobe Experience Cloud </a> e outros recursos do Adobe Analytics, a oportunidade de aproveitar os segmentos avançados de público-alvo criados no Data Workbench. Isso requer que o Experience Cloud esteja configurado e em execução. <p>A integração com o Experience Cloud Principal permite que você execute recursos preditivos como o clustering ou a pontuação de propensão e, em seguida, envie segmentos para a Adobe Experience Cloud ou outros produtos maiores, como Adobe Target e Adobe Experience Manager. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-exp-data-seg-exp/c-segment-export.md#concept-ac18fdb34edc4b9592130ab98fabd05e"> Opções de formato para exportação de arquivo </a> </td> 
-   <td colname="col2"> Adição de opções de formato padrão do setor para segmentos para integração direta com outros recursos, como <b>R</b>, sem manipulação de arquivo adicional. Isso oferece um fluxo de trabalho contínuo e uma análise mais rápida. </td> 
+   <td colname="col2"> Adicionadas opções de formato padrão do setor para integração direta de segmentos com outros recursos, como <b>R</b>, sem manipulação de arquivo adicional. Isso oferece um fluxo de trabalho contínuo e uma análise mais rápida. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-analysis-vis/c-visitor-cluster/c-clustering-2.md"> Geração de cluster 2.0 </a> </td> 
-   <td colname="col2"> Inclui um novo algoritmo <span class="filepath"> KMeans+ </span> ( <span class="filepath"> KMeans </span> é atualmente suportado) que usa uma abordagem mais rápida para encontrar centros para um processo acelerado de geração de cluster. </td> 
+   <td colname="col2"> Inclui um novo <span class="filepath"> KMeans++ </span> algoritmo ( <span class="filepath"> KMeans </span> atualmente é compatível) que usa uma abordagem mais rápida para encontrar centros para um processo acelerado de geração de cluster. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-analysis-vis/c-graphs/c-trend-lines.md#concept-2898b2ef97dc4762bda7df292713e9a2"> Linhas de tendência </a> </td> 
@@ -63,16 +63,16 @@ A Data Workbench 6.3 inclui estes novos recursos:
    <td colname="col2"> A visualização de Latência permite analisar o comportamento latente do cliente em um conjunto de dias antes ou depois de um evento ocorrer após uma campanha ou outro tipo de evento. </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <b></b> Timedimension </td> 
-   <td colname="col2"> No painel Localizadores, agora é possível clicar com o botão direito do mouse na guia <span class="uicontrol"> Dimension </span> e selecionar <span class="uicontrol"> Tipo de Dimension &gt; Tempo </span>. Uma lista de dimensões de tempo será exibida nos resultados da pesquisa. <p> <img placement="break" id="image_BA6A577501A74088B55A881554C89F10" src="assets/time_dim.png" /> </p> </td> 
+   <td colname="col1"> <b>Hora</b> dimension </td> 
+   <td colname="col2"> No painel Localizadores, agora é possível clicar com o botão direito do mouse no <span class="uicontrol"> Dimension </span> e selecione <span class="uicontrol"> Tipo de Dimension &gt; Hora </span>. Uma lista de dimensões de tempo será exibida nos resultados da pesquisa. <p> <img placement="break" id="image_BA6A577501A74088B55A881554C89F10" src="assets/time_dim.png" /> </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <b></b> Recurso de bloqueio </td> 
-   <td colname="col2"> O novo recurso <b>Bloquear</b> exibe um ícone na barra de ferramentas quando um espaço de trabalho é bloqueado. Você pode desbloquear o espaço de trabalho clicando no menu <b>Add</b> e clicando em <b>Desbloquear temporariamente</b>. </td> 
+   <td colname="col1"> <b>Bloquear</b> recurso </td> 
+   <td colname="col2"> O novo <b>Bloquear</b> exibe um ícone na barra de ferramentas quando um espaço de trabalho está bloqueado. Você pode desbloquear o espaço de trabalho clicando no botão <b>Adicionar</b> e, em seguida, clicando em <b>Desbloquear temporariamente</b>. </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> Operadores lógicos e novos recursos de Métrica no <b>Painel de filtro </b> </td> 
-   <td colname="col2"> Operadores lógicos E/OU foram adicionados ao <b>Painel de Filtro</b>, permitindo que você participe ou adicione métricas ao filtrar dados. À medida que você altera métricas, a Porcentagem de filtro é ajustada e exibida de acordo. </td> 
+   <td colname="col1"> Operadores lógicos e novos recursos de Métrica no <b>Painel Filtro </b> </td> 
+   <td colname="col2"> Os operadores lógicos AND/OR foram adicionados ao <b>Painel Filtro</b>, permitindo que você participe ou adicione métricas ao filtrar dados. À medida que você altera métricas, a Porcentagem de filtro é ajustada e exibida de acordo. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> Atalhos de teclado </td> 
@@ -80,14 +80,14 @@ A Data Workbench 6.3 inclui estes novos recursos:
   </tr> 
   <tr> 
    <td colname="col1"> Suporte para Windows 8.1 </td> 
-   <td colname="col2"> O Microsoft Windows 8.1 de 64 bits é <a href="https://experienceleague.adobe.com/docs/data-workbench/using/install/c-data-workbench-client-install.html?lang=pt-BR" format="https" scope="external"> agora compatível </a> para instalação cliente. </td> 
+   <td colname="col2"> O Microsoft Windows 8.1 de 64 bits é <a href="https://experienceleague.adobe.com/docs/data-workbench/using/install/c-data-workbench-client-install.html?lang=pt-BR" format="https" scope="external"> agora suportado </a> para instalação do cliente. </td> 
   </tr> 
  </tbody> 
 </table>
 
 ## Requisitos de atualização e Recommendations {#section-8704a9ac358246cd81233dd0982d534f}
 
-Novos perfis para o Data Workbench estão localizados no perfil **Software e documentos** em
+Novos perfis do Data Workbench estão localizados na seção **Software e documentos** perfil em
 
 ```
 Profiles - Current\DataWorkBench\ 
@@ -100,12 +100,12 @@ Profiles - Current\DataWorkBench\
 
 >[!NOTE]
 >
->Se você tiver personalizado perfis que têm prioridade sobre os arquivos padrão fornecidos no pacote [!DNL Base], será necessário atualizar esses arquivos personalizados:
+>Se você tiver personalizado perfis que tenham precedência sobre os arquivos padrão fornecidos no [!DNL Base] , será necessário atualizar esses arquivos personalizados:
 
-* **Atualize o arquivo Meta.cfg**  (  [!DNL E:\..\Profiles\<your custom profile>\Context\meta.cfg)]para definir a criptografia de senha atualizada para a Unidade do Sistema de Arquivos (servidor FSU) e para adicionar entradas para as transformações do Par de Valor do Nome para aproveitar o Agrupamento de Sequência de  [Consulta](../../../home/c-get-started/c-admin-intrf/c-query-que/c-query-string-grouping.md).
+* **Atualizar o arquivo Meta.cfg** (`E:\..\Profiles\<your custom profile>\Context\meta.cfg`) para definir a criptografia de senha atualizada para a Unidade de Sistema de Arquivos (servidor FSU) e adicionar entradas para as transformações do Par de Valor do Nome para aproveitar [Agrupamento de sequência de consulta](../../../home/c-get-started/c-admin-intrf/c-query-que/c-query-string-grouping.md).
 
-   1. Abra o arquivo [!DNL meta.cfg] no FSU.
-   1. Altere o tipo de dados para **[!UICONTROL Proxy Password]** de &quot; [!DNL string"] para &quot; [!DNL EncryptedString]&quot; na seção *Configuração da estação de trabalho*.
+   1. Abra o [!DNL meta.cfg] no FSU.
+   1. Alterar o tipo de dados para **[!UICONTROL Proxy Password]** de &quot; [!DNL string"] para &quot; [!DNL EncryptedString]&quot; na *Configuração da estação de trabalho* seção.
 
       ```
       Proxy User Name = string: 
@@ -113,19 +113,19 @@ Profiles - Current\DataWorkBench\
       Use Address File = bool: true
       ```
 
-   1. Adicione novas entradas para ativar as novas transformações do Par de Valor de Nome: *BuildNameValuePair* e *ExtractNameValuePairs*.
+   1. Adicione novas entradas para ativar as novas transformações do Par de Valor de Nome: *ParValorDoNomeDeBuild* e *ExtractNameValuePairs*.
 
-      Abra um espaço de trabalho e clique com o botão direito do mouse em **Admin** > **Gerenciador de perfis**.
+      Abra um espaço de trabalho e clique com o botão direito do mouse **Administrador** > **Gerenciador de perfis**.
 
-      Em **Contexto**, clique no arquivo **meta.cfg** na coluna **Base** e clique em **Tornar Local**. Na coluna Tabela do usuário , clique com o botão direito do mouse e selecione **Abrir** > **na estação de trabalho**.
+      Em **Contexto**, clique no botão **meta.cfg** no **Base** e clique em **Tornar local**. Na coluna User table , clique com o botão direito do mouse e selecione **Abrir** > **na estação de trabalho**.
 
       ![](assets/meta_cfg.png)
 
-      * Na nova janela, clique em **metadata** e adicione modelos secundários aceitáveis.
+      * Na nova janela, clique em **metadados** e adicionar modelos filhos aceitáveis.
 
       ![](assets/meta_cfg_child.png)
 
-      * Abra **transformation** e adicione novos templates.
+      * Abrir **transformação** e adicionar novos modelos.
 
       ![](assets/meta_cfg_template.png)
 
@@ -133,7 +133,7 @@ Profiles - Current\DataWorkBench\
 
 * **Atualização para melhorias na Fast Merge**. Adicione parâmetros ou altere valores para os seguintes arquivos de configuração para aproveitar as melhorias de velocidade no Data Workbench durante uma transformação.
 
-   * **Communications.cfg**  ([!DNL E:\Server\Components\Communications.cfg])
+   * **Communications.cfg** ([!DNL E:\Server\Components\Communications.cfg])
 
       ```
       18 = SourceListServer:  
@@ -141,7 +141,7 @@ Profiles - Current\DataWorkBench\
           Listing Interval = int: 10 (new)
       ```
 
-   * **Disk Files.cfg**  (at  [!DNL E:\Server\Components] e  [!DNL E:\Server\Components for Processing Servers])
+   * **Arquivos de disco.cfg** a [!DNL E:\Server\Components] e [!DNL E:\Server\Components for Processing Servers])
 
       ```
       Disk Cache Size (MB) = double: 1024 (from double: 256) 
@@ -179,17 +179,14 @@ Profiles - Current\DataWorkBench\
       >* O Intervalo de salvamento, a duração entre as salvas do conjunto de dados, pode precisar ser reduzido se os novos parâmetros do Modo de processamento de log forem aplicados. Como a transformação será concluída mais rápido, o arquivo de estado do conjunto de dados conterá mais dados entre Salvar intervalos em comparação com versões anteriores.
 
       >
-      >  **É recomendável reduzir a configuração Salvar intervalo para 1800 segundos (30 minutos)**; o padrão Salvar intervalo é 3600 segundos (1 hora). (Se essa linha precisar ser adicionada ao [!DNL Log Processing Mode.cfg], observe que há dois (2) espaços à esquerda).
+      >  **Recomenda-se reduzir a configuração Salvar intervalo para 1800 segundos (30 minutos)**—o Intervalo de salvamento padrão é de 3600 segundos (1 hora). (Se esta linha precisar ser adicionada à variável [!DNL Log Processing Mode.cfg], observe que há dois (2) espaços à esquerda).
       >
-      >  
-      ```
-      >      Save Interval (sec) = int: 1800
-      >  ```
+      >`Save Interval (sec) = int: 1800`
       >
-      >  * É recomendável que os novos parâmetros do Modo de processamento de log não sejam aplicados a um conjunto de dados configurado com uma **CrossRows** usando a operação **All**. Com essas configurações, o uso de memória para essa operação pode se tornar muito grande para o ambiente.
+      >  * É recomendável que os novos parâmetros de Modo de processamento de log não sejam aplicados a um conjunto de dados configurado com um **CrossRows** usando o **Todos** operação. Com essas configurações, o uso de memória para essa operação pode se tornar muito grande para o ambiente.
 
 
-* **Atualização da integração do Adobe Target com DWB**. Um novo arquivo de exportação, [!DNL ExportIntegration.exe], substitui o arquivo [!DNL TnTSend.exe] existente no Servidor Insight ( [!DNL E:\Server\Scripts\TnTSend.exe]). Esse novo arquivo de exportação oferece suporte à integração e coordenação do Adobe Target com o novo MMP (Principal Marketing Profile) e Adobe Audience Manager.
+* **Atualização de integração do Adobe Target com DWB**. Um novo arquivo de exportação, [!DNL ExportIntegration.exe], substitui [!DNL TnTSend.exe] no servidor Insight ( [!DNL E:\Server\Scripts\TnTSend.exe]). Esse novo arquivo de exportação oferece suporte à integração e coordenação do Adobe Target com o novo MMP (Principal Marketing Profile) e Adobe Audience Manager.
 
    Você precisará atualizar os seguintes comandos para exportações do Adobe Target.
 
@@ -211,14 +208,14 @@ Profiles - Current\DataWorkBench\
    >Você também pode tentar o seguinte para utilizar o processo de exportação antigo:
    >    
    >* Crie uma nova exportação de Test&amp;Target na estação de trabalho.
-   >* Modifique a exportação antiga do Test and Target encontrada em Server/Profiles/`<your profile>`/Export.
+   >* Modifique a antiga exportação de Test e Target encontrada em Server/Profiles/`<your profile>`/Export.
 
 
-* **Atualize o perfil do Adobe SC.** As alterações no  [!DNL Exclude Hit.cfg] arquivo exigem que um campo seja declarado no  [!DNL Decoding Instructions.cfg] arquivo associado.
+* **Atualize o perfil do Adobe SC.** Alterações à [!DNL Exclude Hit.cfg] O arquivo requer que um campo seja declarado no [!DNL Decoding Instructions.cfg] arquivo.
 
    >[!NOTE]
    >
-   >Se o seu perfil do Adobe SC incluir um arquivo [!DNL Decoding Instructions.cfg] personalizado, será necessário incluir um parâmetro [!DNL DelimitedDecoder] no arquivo personalizado.
+   >Se o seu perfil Adobe SC incluir um [!DNL Decoding Instructions.cfg] , será necessário incluir um [!DNL DelimitedDecoder] para seu arquivo personalizado.
 
    ```
    0 = DelimitedDecoder: 
@@ -231,15 +228,15 @@ Profiles - Current\DataWorkBench\
    5 = string: x-hit_source
    ```
 
-   Adicionar o campo [!DNL DelimitedDecoder] permite aproveitar as atualizações de recursos e evitar possíveis problemas de processamento de log resultantes dessas atualizações.
+   Adicionar a [!DNL DelimitedDecoder] permite aproveitar as atualizações de recursos e evitar possíveis problemas de processamento de log resultantes dessas atualizações.
 
 **Cliente de atualização:**
 
 * **Atualize seu cliente do servidor**.
 
-   Depois que o servidor for atualizado, o cliente poderá atualizar automaticamente se o arquivo [!DNL Insight.cfg] estiver configurado corretamente:
+   Depois que o servidor for atualizado, o cliente poderá atualizar automaticamente se a variável [!DNL Insight.cfg] O arquivo está configurado corretamente:
 
-   1. Edite o arquivo [!DNL Insight.cfg].
+   1. Edite o [!DNL Insight.cfg] arquivo.
 
       ```
       Update Software = bool: true
@@ -283,7 +280,7 @@ Profiles - Current\DataWorkBench\
 
 * **Recomendação**: **Novos temas do Windows Aero. ** Atualize a aparência do seu aplicativo cliente usando os Temas do Windows Aero.
 
-* **Recomendação: Fontes para versões** em chinês e japonês:
+* **Recomendação: Fontes para versões em chinês e japonês**:
 
    Chinês:
 
@@ -300,7 +297,7 @@ Profiles - Current\DataWorkBench\
 
    >[!NOTE]
    >
-   >** SimSuncan pode ser usado para chinês e japonês. Se estiver tentando gravar caracteres de meio byte em japonês, também é necessário incluir *MS Mincho*. Para ativar essas fontes em [!DNL Insight.cfg], você pode adicionar esses parâmetros.
+   >*SimSun* pode ser usado para chinês e japonês. Ao tentar gravar caracteres de meio byte em japonês, também é necessário incluir *MS Mincho*. Para ativar essas fontes em [!DNL Insight.cfg], é possível adicionar esses parâmetros.
 
    ```
    0 = string: Arial 
@@ -312,31 +309,31 @@ Profiles - Current\DataWorkBench\
 
 **Atualizar para o Adobe Analytics Premium**
 
-Para executar a **Atribuição de melhor ajuste** no Data Workbench, você precisa receber novos certificados do Adobe ClientCare para seu cliente, servidor e servidor de relatórios (arquivos .pem) para oferecer suporte ao Adobe Analytics Premium. Cada um dos novos certificados terá este parâmetro:
+Para executar **Atribuição de melhor ajuste** no Data Workbench, você precisa receber novos certificados do Adobe ClientCare para seu cliente, servidor e servidor de relatórios (arquivos .pem) para oferecer suporte ao Adobe Analytics Premium. Cada um dos novos certificados terá este parâmetro:
 
 ```
 Product = Premium
 ```
 
-O Pacote Premium está disponível para download em **[!UICONTROL Software and Docs]** na guia **[!UICONTROL Getting Started]** no espaço de trabalho de arquivos **Profiles and Lookup**. Navegue até `Profiles - Current\DataWorkBench\<language>\Data WorkBench_6.30-en-us\Premium_6.30_en-us.zip`.  Depois que o perfil **Premium** for carregado no servidor, será necessário adicionar um parâmetro *Premium* ao arquivo personalizado [!DNL Profile.cfg]. Isso permite que o perfil personalizado inclua menus, visualizações e espaços de trabalho como parte do Adobe Analytics Premium.
+O pacote Premium está disponível para download em **[!UICONTROL Software and Docs]** nos termos do **[!UICONTROL Getting Started]** na guia **Perfis e pesquisa** espaço de trabalho de arquivos. Navegar para `Profiles - Current\DataWorkBench\<language>\Data WorkBench_6.30-en-us\Premium_6.30_en-us.zip`.  Uma vez **Premium** for carregado no servidor, será necessário adicionar um *Premium* para seu [!DNL Profile.cfg] arquivo. Isso permite que o perfil personalizado inclua menus, visualizações e espaços de trabalho como parte do Adobe Analytics Premium.
 
 ## Erros corrigidos {#section-e1e3df3da3594987a325344cd5e8b855}
 
-* Correção de um problema em que a visualização do **Density Map** não possuía os elementos maiores.
-* Correção de um problema no **Density Map** em que a área dos elementos não retornava a proporção do valor da métrica.
-* Correção de um problema em que arrastar a métrica do painel **[!UICONTROL Finders]** para a legenda da métrica fora da coluna de métrica excluía a legenda do espaço de trabalho.
-* Correção de um problema em que **[!UICONTROL Print Workspace]** usando as opções **[!UICONTROL Sidebar]** e **[!UICONTROL Both]** não incluíam as informações de Direitos autorais na página impressa.
+* Correção de um problema em que a função **Mapa de densidade** a visualização não exibia os elementos maiores.
+* Correção de um problema em **Mapa de densidade** onde a área dos elementos não retratava a proporção do valor da métrica.
+* Corrigido um problema ao arrastar a métrica de **[!UICONTROL Finders]** legenda para métrica fora da coluna de métrica excluiria a legenda do espaço de trabalho.
+* Correção de um problema em que **[!UICONTROL Print Workspace]** usar **[!UICONTROL Sidebar]** e **[!UICONTROL Both]** opções não incluirão as informações de direitos autorais na página impressa.
 
 ## Problemas conhecidos {#section-751e8698e9f14b75a85f63253782be41}
 
-* Os usuários de **placas gráficas AMD Radeon™** devem atualizar para os drivers gráficos mais recentes. Algumas versões anteriores do driver alegam que elas suportam o openGL 3.2, mas são inconsistentes.
-* A saída gerada pela configuração **Segment Export** sem uma declaração de cabeçalho pode resultar em um cabeçalho de bogus exibido no início do arquivo, que está em conflito com o primeiro conjunto de linhas.
-* **Adicionar** dimensões mostra apenas as Dimension  *estendidas*. A solução alternativa é usar a ferramenta **Localizadores** para arrastar dimensões para tabelas.
+* Usuários de **Placas gráficas AMD Radeon™** deve atualizar para os drivers gráficos mais recentes. Algumas versões anteriores do driver alegam que elas suportam o openGL 3.2, mas são inconsistentes.
+* Saída gerada por **Exportar segmento** a configuração sem uma declaração de cabeçalho pode resultar em um cabeçalho de bogus exibido no início do arquivo, o que está em conflito com o primeiro conjunto de linhas.
+* **Adicionar Dimension** mostra somente o *Dimension estendidas*. A solução alternativa é usar a variável **Localizadores** ferramenta para arrastar dimensões para tabelas.
 
 * Quando a Visualização do Gráfico de Dispersão 3D inclui chamadas, o zoom pode exibir gráficos fora da borda da visualização. Para contornar esse problema, amplie o Gráfico de dispersão 3D primeiro e, em seguida, adicione chamadas à visualização.
 * O uso da estação de trabalho na sessão de Área de trabalho remota falhará ao renomear espaços de trabalho.
 * Listar item
-* **Os arquivos de exportação de Segmento herdado são enviados com** aspas duplas, mesmo se o arquivo de exportação não contiver aspas no campo Formato de saída .
+* **Arquivos de exportação de segmento herdado são enviados com aspas duplas** mesmo que o arquivo de exportação não contenha aspas no campo Formato de saída .
 
    *Solução alternativa*: Adicione essas três linhas ao arquivo .export . A configuração desses valores não acionará uma integração MMP (como outros campos de configuração são necessários), mas ignorará escapamentos automáticos indesejados.
 
